# urgent2026_challenge_track2

./: .gitmodules  BENCHMARK.md  README.md  pyproject.toml  run.sh
configs/: uni-versa-ext.yaml  universa-ext.yaml  universa-ext_wavlm-base_22metric.yaml  universa-ext_wavlm-base_5metric.yaml  universa-ext_wavlm-base_mos-only.yaml
local/build_dataset/: compute_dnsmos.py  compute_nisqa_mos.py  compute_scoreq.py  compute_utmos.py  get_utt2dur.py  merge_metrics.py  run.sh
scripts/: eval.py
scripts/data/: collect_metrics.py  csv2data.sh  csv2jsonl.py  csv2scps.py  get_utt2dur.py  prepare.sh
scripts/data/bc19/: data_prep.py  prepare.sh
scripts/data/bvcc/: data_prep.py  prepare.sh
scripts/data/chime-7-udase-eval/: data_prep.py  prepare.sh
scripts/data/nisqa/: data_prep.py  prepare.sh
scripts/data/pstn/: data_prep.py  prepare.sh
scripts/data/somos/: data_prep.py  prepare.sh
scripts/data/tcd-voip/: data_prep.py  prepare.sh
scripts/data/tencent/: data_prep.py  prepare.sh
scripts/data/tmhint-qi/: data_prep.py  prepare.sh
scripts/data/ttsds2/: data_prep.py  prepare.sh
scripts/data/urgent2024-sqa/: data_prep.py  prepare.sh
scripts/data/urgent2025-sqa/: data_prep.py  prepare.sh
scripts/data/urgent24-sqa/: data_prep.py  prepare.sh
scripts/data/urgent25-sqa/: prepare.sh
scripts/multi_metric/: build_dataset.sh  compute_distill_mos.py  compute_dnsmos_ovrl.py  compute_nisqa_mos.py  compute_scoreq.py  compute_utmos.py  compute_utmosv2.py  nisqa_utils.py
src/: data.py  eval.py  infer.py  model.py  train.py  trainer.py  utils.py
urgent2026_sqa/: data.py  eval.py  infer.py  model.py  train.py  trainer.py  utils.py
