# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urgent2026_sqa"
version = "0.2.0"
description = "The official implementation of the UniVERSA-Ext baseline for the ICASSP 2026 URGENT Track 2 Speech Quality Assessment Challenge."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Wei Wang", email = "wangweidmail0809@gmail.com" }]

dependencies = [
    "accelerate",
    "torch",
    "torchaudio",
    "hyperpyyaml",
    "huggingface_hub",
    "transformers",
    "einops",
]

# Extras: install with pip install -e ".[dev]" (or ".[dev,docs]" for multiple)
[project.optional-dependencies]
train = ["pandas", "scipy", "tensorboard", "accelerate"]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",       # linter/formatter
    "mypy",       # type checking
    "pre-commit", # git hooks
]
docs = ["mkdocs-material", "mkdocstrings[python]"]

[tool.setuptools]
packages = { find = { include = ["urgent2026_sqa*"] } }
